--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -2,6 +2,6 @@ spring.application.name=demo
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/movies
 spring.datasource.username=root
-spring.datasource.password=MSQLGV12#
+spring.datasource.password=password
 logging.level.root=WARN
 spring.jpa.show-sql=true
